tests/Core/positive/lambda-lifting/test3.jvc
def const := \x \y x;
def id := \x x;
def t3 := \r \s const (\x x) (id (\x r));
