tests/Core/negative/parsing/test001.jvc
def main := f 0;

def f := \x x;
